# beldex-libapp_js_2

./: .gitmodules  CMakeLists.txt  README.md
libapp_js/: BeldexLibAppBridge.js  BeldexLibAppBridgeClass.js  BeldexLibAppCpp_WASM.js  BeldexLibAppCpp_WASM.wasm  MyMoneroLibAppCpp_WASM.js  MyMoneroLibAppCpp_WASM.wasm
src/: emscr_SendFunds_bridge.cpp  emscr_SendFunds_bridge.hpp  index.cpp  walletf2.cpp  walletf2.h
tests/: BeldexLibAppCpp.node.js  MyMoneroLibAppCpp.node.js  sendingFunds.spec.js
